# sober

./: .gitignore  LICENSE  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  publish_docs.yml  publish_pypi.yml  test.yml
docs/: index.md
docs/api/: config.md  input.md  output.md  problem.md
optimisation/: __init__.py  _args_check.py  _evaluator.py  _logger.py  _multiplier.py  _optimiser.py  _product.py  _pymoo_namespace.py  _simulator.py  _tools.py  _typing.py  collector.py  config.py  optimiser.py  parameters.py  problem.py  results.py
prob/: _optimiser.py  _pymoo_namespace.py  _tools.py  problem.py  results.py
sober/: __init__.py  _evaluator.py  _evolver.py  _evolver_pymoo.py  _io_managers.py  _logger.py  _multiplier.py  _optimiser.py  _pymoo_namespace.py  _serialiser.py  _simulator.py  _tools.py  _typing.py  config.py  input.py  output.py  parameters.py  problem.py  results.py
tests/: _tools.py  test_config.py
