[tool.poetry]
name = "sober"
version = "0.0.1-alpha.0"
description = "sober optimises built environment robustly"
authors = ["Cheng Cui <cheng.cui.95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymoo = "^0.6.1"
eppy = "^0.5.63"
numpy = "^1.23"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "PGH", "UP", "N"]
ignore = ["E741"]
