[tool.poetry]
name = "sober"
version = "0.0.1-alpha.0"
description = "sober optimises built environment robustly"
authors = ["Cheng Cui <cheng.cui.95@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymoo = "^0.6.1"
eppy = "^0.5.63"
numpy = "^1.23"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "B",
    "C4",
    "FLY",
    "I",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PGH",
    "PIE",
    "PLE",
    "PT",
    "PYI",
    "RET",
    "RUF",
    "RUF022",
    "SIM",
    "SLOT",
    "T20",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = ["E741", "TRY003", "RET505"]
preview = true
explicit-preview-rules = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
ignore_missing_imports = true
disallow_any_generics = true
enable_incomplete_feature = ["PreciseTupleTypes"]
